--- a/_data/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json
+++ b/_data/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json
@@ -23,6 +23,14 @@
         "id": "https://nowviskie.github.io/BN-test-Yaounde-Olu/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/canvas-1/canvas",
         "type": "Canvas",
         "duration": 632,
+        "annotations": [
+          
+          {
+            "type": "AnnotationPage",
+            "id": "https://nowviskie.github.io/BN-test-Yaounde-Olu/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/canvas-1/canvas/transcription.json",
+            "label": "Transcription"
+          }
+        ],
         "items": [
           {
             "id": "https://nowviskie.github.io/BN-test-Yaounde-Olu/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/canvas-1/paintings",
