--- a/_data/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json
+++ b/_data/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json
@@ -36,6 +36,12 @@
             "id": "https://nowviskie.github.io/BN-test-Yaounde-Olu/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/canvas-1/canvas/transcription.json",
             "label": "Transcription"
           }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://nowviskie.github.io/BN-test-Yaounde-Olu/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/canvas-1/canvas/speaker.json",
+            "label": "Speaker"
+          }
         ],
         "items": [
           {
