--- a/_data/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json
+++ b/_data/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json
@@ -2,12 +2,12 @@
     "@context": "http://iiif.io/api/presentation/3/context.json",
     "id": "https://nowviskie.github.io/BN-test-Yaounde-Olu/interview-with-yaound-olu-artist-writer-astrologer-uniphysician-chicago-illinois/manifest.json",
     "type": "Manifest",
-    "label": { "en": [ "Interview with Yaoundé Olu: artist, writer, astrologer, uniphysician, Chicago, Illinois" ] },
+    "label": { "en": [ "Interview with Yaoundé Olu" ] },
     "homepage": [
       {
         "id": "https://www.loc.gov/item/afc1981004_afs20638a/",
         "type": "Text",
-        "label": { "en": [ "Interview with Yaoundé Olu: artist, writer, astrologer, uniphysician, Chicago, Illinois" ] },
+        "label": { "en": [ "Interview with Yaoundé Olu" ] },
         "format": "text/html"
       }
     ],
